--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    salom
+    <div class="loader">
+      <div class="ring"></div>
+    </div>
+
+    <div class="container">
+      <div class="wrapper">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+    </div>
 
     <script src="main.js"></script>
   </body>
